<resources>

    <string name="app_name">Bitcoin Games</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Bitcoin Games</string>
    <string name="credits">CREDITS</string>
    <string name="free_spins">FREE SPINS</string>
    <string name="bet_amount">BET %d</string>
    <string name="auto">AUTO</string>
    <string name="help">HELP</string>
    <string name="bet_max">BET MAX</string>
    <string name="credit_value">0.001 BTC\nCREDIT VALUE</string>
    <string name="slots_spin">SPIN</string>
    <string name="cashout_amount_btc">Withdraw amount (BTC)</string>
    <string name="cashout_full_amount">Full amount</string>
    <string name="cashout_destination_address">Destination address</string>
    <string name="cashout_scan_qr_code">Scan QR Code</string>
    <string name="cashout_submit">Cash out</string>
    <string name="cashout_transaction_fee_info">A small transaction fee of 0.0005 BTC will be deducted</string>
    <string name="deposit_address">Your deposit address:</string>
    <string name="deposit_clipboard_hint">(Touch to copy to Clipboard)</string>
    <string name="deposit_external_app">Tap here to use external app to deposit Bitcoins</string>
    <string name="deposit_app_recommendation">We recommend the BlockChain Android app to quickly send and receive Bitcoins.</string>
    <string name="dice_jackpot5_text">ROLL FIVE 7\'S</string>
    <string name="dice_jackpot6_text">ROLL SIX 7\'S</string>
    <string name="dice_label_payout">PAYOUT</string>
    <string name="dice_label_descriptor_payout">(multiplier)</string>
    <string name="dice_label_win_chance">WIN CHANCE</string>
    <string name="dice_label_descriptor_win_chance">(%)</string>
    <string name="dice_label_bet_amount">BET AMOUNT</string>
    <string name="dice_label_descriptor_bet_amount">(credits)</string>
    <string name="dice_label_profit">PROFIT</string>
    <string name="dice_label_descriptor_profit">(credits)</string>
    <string name="dice_chance_max_97_percentage">Chance can not be greater than 97%</string>
    <string name="dice_roll_high_button"><![CDATA[ROLL HIGH %s]]></string>
    <string name="dice_roll_low_button"><![CDATA[ROLL LOW %s]]></string>
    <string name="main_connecting">Connecting…</string>
    <string name="deposit">Deposit</string>
    <string name="cash_out">Cash out</string>
    <string name="main_button_settings">Settings</string>
    <string name="main_button_share">Share</string>
    <string name="main_local_test_build">LOCAL TEST BUILD</string>
    <string name="slots_bonus_3_or_more">3 OR MORE</string>
    <string name="slots_bonus_free_spins">10 FREE SPINS</string>
    <string name="slots_bonus_five_in_a_row_1">FIVE</string>
    <string name="slots_bonus_five_in_a_row_2">IN A ROW</string>
    <string name="slots_info_bar_play_20_lines">PLAY 20 LINES FOR MORE WINS</string>

    <string name="slots_info_bar_win_configuration_1">WIN 1 LINE</string>
    <string name="slots_info_bar_win_configuration_2">WIN %d LINES</string>
    <string name="slots_info_bar_win_configuration_3">WIN %d SCATTER BONUS</string>
    <string name="slots_info_bar_win_configuration_4">WIN 1 LINE AND %d SCATTER BONUS</string>
    <string name="slots_info_bar_win_configuration_5">WIN %1$d LINES AND %2$d SCATTER BONUS</string>
    <string name="bj_button_insurance">INSURANCE</string>
    <string name="bj_button_insurance_won">INSURANCE WON</string>
    <string name="bj_button_insurance_lost">INSURANCE LOST</string>
    <string name="text_double">DOUBLE</string>
    <string name="bj_button_split">SPLIT</string>
    <string name="bj_button_hit">HIT</string>
    <string name="bj_button_stand">STAND</string>
    <string name="button_draw">DRAW</string>
    <string name="bj_label_bet">BET</string>
    <string name="bj_credits_hint">1 CREDIT = 0.0001 BTC</string>
    <string name="bj_credits_hint_max_bet">MAX BET 10,000 CREDITS</string>
    <string name="slots_number_of_lines">LINES %d</string>
    <string name="slots_how_to_play_instructions">(Swipe left/right to change help page)</string>
    <string name="vp_button_more_games">MORE GAMES</string>
    <string name="button_btc_credit_value">%s BTC \nCREDIT VALUE</string>
    <string name="auto_menu_speed">Speed</string>
    <string name="auto_menu_strategy">Strategy</string>
    <string name="bj_auto_menu_insurance">Take insurance</string>
    <string name="play">Play</string>
    <string name="cancel">Cancel</string>
    <string name="dice_auto_menu_target">Target</string>
    <string name="bitcoin_balance">Balance: %s BTC</string>
    <string name="QR_code_error">Error scanning QR code</string>
    <string name="cashout_dialog_withdrawing_bitcoins">Withdrawing Bitcoins…</string>
    <string name="cashout_dialog_success">%1$s BTC was sent to:\n%2$s</string>
    <string name="success">Success</string>
    <string name="cashout_failure_reason_pending_txs">Reason: One or more of your previous deposits is still not confirmed. Deposit confirmations usually take 10–20 minutes. Please try again later.</string>
    <string name="cashout_failure_reason_bad_address">Reason: Invalid destination address. Please check the Bitcoin address and try again.</string>
    <string name="cashout_failure_reason_balance">Reason: Invalid withdrawal amount. Please check the amount and try again.</string>
    <string name="cashout_failure_reason_server_msg">Reason: %s</string>
    <string name="cashout_dialog_failure_title">Unable to cash out</string>
    <string name="ok">OK</string>
    <string name="btc">BTC</string>
    <string name="deposit_missing_wallet_message">No Bitcoin app was found on your device. Would you like to download the Blockchain Bitcoin wallet from Google Play?</string>
    <string name="deposit_missing_wallet_app_url">https://play.google.com/store/apps/details?id=piuk.blockchain.android</string>
    <string name="deposit_message_retrieving_dep_address">Retrieving deposit address…</string>
    <string name="warning_waiting_for_btc_confirmations">(Some deposits are waiting for confirmations)</string>
    <string name="vp_auto_menu_play_mode">Play mode</string>
    <string name="vp_auto_menu_double_down">Double down</string>
    <string name="vp_hold">HOLD</string>
    <string name="vp_dealer">DEALER</string>
    <string name="bj_ace_or">OR</string>
    <string name="text_win">WIN</string>

    <string-array name="auto_strategy_array">
        <item>Repeat same bet</item>
        <item>Martingale</item>
    </string-array>
    <string-array name="auto_speed_array">
        <item>Slow</item>
        <item>Medium</item>
        <item>Fast</item>
    </string-array>
    <string-array name="auto_target_array">
        <item>High</item>
        <item>Low</item>
    </string-array>
    <string-array name="vp_mode_array">
        <item>Standard</item>
        <item>Hold only</item>
    </string-array>
    <string-array name="vp_double_array">
        <item>Never</item>
        <item>Sometimes (50%)</item>
        <item>Always</item>
    </string-array>

    <string-array name="bj_insurance_array">
        <item>Never</item>
        <item>Sometimes</item>
        <item>Always</item>
    </string-array>
</resources>