<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    tools:context=".app.SlotsActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/contents"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#ffffff"
        android:orientation="horizontal">

        <View
            android:id="@+id/border"
            android:background="@color/vp_payout_border"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true" />

        <TextView
            android:id="@+id/crap_text"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:textColor="@color/vp_payout_text"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:gravity="center_vertical"
            android:layout_alignParentStart="true"
            android:text="@string/slots_bonus_3_or_more"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/scatter_img"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:scaleType="centerInside"
            android:layout_toEndOf="@id/crap_text"
            android:src="@drawable/s_symbols0_0" />

        <TextView
            android:id="@+id/crap_text2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="#00b8d4"
            android:text="@string/slots_bonus_free_spins"
            android:layout_marginEnd="10dp"
            android:gravity="center_vertical"
            android:layout_toStartOf="@id/border"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/crap_text3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/vp_payout_text"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:layout_gravity="start"
            android:gravity="center_vertical"
            android:text="@string/slots_bonus_five_in_a_row_1"
            android:textStyle="bold"
            android:layout_toEndOf="@id/border" />

        <ImageView
            android:id="@+id/wild_img"
            android:layout_height="match_parent"
            android:scaleType="centerInside"
            android:src="@drawable/s_symbols0_1"
            android:layout_toEndOf="@id/crap_text3"
            android:layout_width="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/vp_payout_text"
            android:text="@string/slots_bonus_five_in_a_row_2"
            android:id="@+id/crap_text4"
            android:gravity="center_vertical"
            android:layout_toEndOf="@id/wild_img"
            android:textStyle="bold" />

        <TextView
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:textColor="#00b8d4"
            android:text="10000"
            android:id="@+id/jackpot"
            android:gravity="end|center"
            android:layout_marginEnd="6dp"
            android:textStyle="bold"
            android:layout_alignParentEnd="true"
            tools:ignore="HardcodedText" />

    </RelativeLayout>

    <SurfaceView
        android:id="@+id/surface_holder"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_weight="500"
        android:layout_height="0dp"
        android:layout_marginTop="10dp" />

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="400dp"
        android:layout_weight="40"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/round_corner_bottom"
        android:layout_gravity="center"
        android:id="@+id/win_info_box"
        android:orientation="horizontal">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center|start"
            android:text=""
            android:textColor="@color/vp_payout_text"
            android:layout_marginStart="5dp"
            android:textStyle="bold"
            android:id="@+id/line_win_pays" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:textColor="@color/vp_payout_text"
            android:text="@string/slots_info_bar_play_20_lines"
            android:textStyle="bold"
            android:id="@+id/play_twenty_lines" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textColor="@color/vp_payout_text"
            android:text=""
            android:id="@+id/win_summary"
            android:layout_marginEnd="5dp"
            android:gravity="center|end"
            android:textStyle="bold" />

    </FrameLayout>

    <include
        android:id="@+id/win_bet_credits"
        layout="@layout/win_bet_credits" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/button_bar">

        <Button
            style="@style/button"
            android:id="@+id/auto_button"
            android:onClick="onAuto"
            android:background="@drawable/button_yellow"
            android:text="@string/auto"
            android:layout_alignParentStart="true" />

        <Button
            style="@style/button"
            android:id="@+id/help_button"
            android:layout_width="60dp"
            android:onClick="onHelp"
            android:background="@drawable/button_cyan"
            android:text="@string/help"
            android:layout_toEndOf="@id/auto_button" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_centerInParent="true"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal">

            <com.bitcoin.games.app.SlotsChangeLineLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/lines_button"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginEnd="3dp"
                android:orientation="horizontal">

                <TextView
                    style="?android:attr/buttonBarButtonStyle"
                    android:id="@+id/lines_minus"
                    android:layout_height="fill_parent"
                    android:layout_width="20dp"
                    android:layout_gravity="center_horizontal"
                    android:scaleType="fitCenter"
                    android:background="@drawable/s_minus_button"
                    android:textColor="#000000"
                    android:fontFamily="sans-serif"
                    android:textStyle="bold"
                    android:gravity="center|center_horizontal"
                    android:text="-"
                    tools:ignore="HardcodedText" />

                <TextView
                    style="?android:attr/buttonBarButtonStyle"
                    android:id="@+id/lines_button_text"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="65dp"
                    android:scaleType="fitCenter"
                    android:background="#FFFFFF"
                    android:textColor="#000000"
                    android:fontFamily="sans-serif"
                    android:gravity="center|center_horizontal"
                    android:textStyle="bold"
                    android:text="@string/slots_number_of_lines" />

                <TextView
                    style="?android:attr/buttonBarButtonStyle"
                    android:id="@+id/lines_plus"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="fill_parent"
                    android:gravity="center|center_horizontal"
                    android:layout_width="20dp"
                    android:scaleType="fitCenter"
                    android:background="@drawable/s_plus_button"
                    android:textColor="#000000"
                    android:fontFamily="sans-serif"
                    android:textStyle="bold"
                    android:text="+"
                    tools:ignore="HardcodedText" />

            </com.bitcoin.games.app.SlotsChangeLineLayout>

            <Button
                style="@style/button"
                android:id="@+id/betmax_button"
                android:onClick="onBetMax"
                android:background="@drawable/button_white"
                android:textColor="#000000"
                android:text="@string/bet_max" />

            <Button
                style="@style/button"
                android:id="@+id/btc_button"
                android:layout_width="100dp"
                android:onClick="onCreditBTC"
                android:background="@drawable/button_dark"
                android:text="@string/credit_value"
                android:textSize="12sp" />

        </LinearLayout>

        <Button
            style="@style/button"
            android:id="@+id/pull_button"
            android:onClick="onPull"
            android:background="@drawable/button_blue"
            android:layout_alignParentEnd="true"
            android:text="@string/slots_spin" />

    </RelativeLayout>
</LinearLayout>