<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg2"
    android:splitMotionEvents="false"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".app.MainActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:splitMotionEvents="false"
        android:gravity="top"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/title_image"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:adjustViewBounds="false"
            android:gravity="clip_horizontal"
            android:layout_marginTop="2dp"
            android:src="@drawable/ref_logo"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:splitMotionEvents="false"
            android:orientation="vertical">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:splitMotionEvents="false"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/videopoker_button"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:onClick="onVideoPoker"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="false"
                    android:gravity="clip_horizontal"
                    android:background="@null"
                    android:src="@drawable/videopoker_button" />

                <ImageButton
                    android:id="@+id/blackjack_button"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:onClick="onBlackjack"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="false"
                    android:gravity="clip_horizontal"
                    android:background="@null"
                    android:src="@drawable/blackjack_button" />

            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:splitMotionEvents="false"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/slots_button"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:onClick="onSlots"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="false"
                    android:gravity="clip_horizontal"
                    android:background="@null"
                    android:src="@drawable/slots_button" />

                <ImageButton
                    android:id="@+id/dice_button"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:onClick="onDice"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="false"
                    android:gravity="clip_horizontal"
                    android:background="@null"
                    android:src="@drawable/dice_button" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="18sp"
            android:textColor="#ffffff"
            android:text="@string/main_connecting"
            android:textIsSelectable="false" />


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_gravity="bottom"
            android:splitMotionEvents="false"
            android:orientation="horizontal">

            <Button
                android:id="@+id/deposit_button"
                android:layout_height="wrap_content"
                android:text="@string/deposit"
                android:onClick="onDeposit"
                android:textSize="22sp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:layout_width="0dp" />

            <Button
                android:id="@+id/cashout_button"
                android:layout_height="wrap_content"
                android:text="@string/cash_out"
                android:onClick="onCashOut"
                android:textSize="22sp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:layout_width="0dp" />

            <Button
                android:id="@+id/settings_button"
                android:layout_height="wrap_content"
                android:text="@string/main_button_settings"
                android:onClick="onSettings"
                android:textSize="22sp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:layout_width="0dp" />

            <Button
                android:id="@+id/share_button"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="top|end"
                android:onClick="onShare"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:textSize="22sp"
                android:text="@string/main_button_share"
                android:drawableEnd="@drawable/social_share" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/test_local_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        android:layout_marginStart="10dp"
        android:textSize="32sp"
        android:textColor="#ffffff"
        android:text="@string/main_local_test_build" />

</FrameLayout>
